major overhaul, adding fraction table filtering, reordering aggregation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(blacksheep)
 export(comparison_groupings)
 export(count_outliers)
 export(create_heatmap)
+export(make_comparison_columns)
 export(make_outlier_table)
 export(outlier_analysis)
 export(outlier_heatmap)
