update vignettes, tweaks to code

--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -1,2 +1,13 @@
+#----------------------------
+# RStudio and R
+#----------------------------
+^\.Rhistory$
 ^.*\.Rproj$
 ^\.Rproj\.user$
+
+
+#----------------------------
+# Git
+#----------------------------
+^\.git$
+^\.gitignore$
