--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(outlier_analysis)
 export(outlier_heatmap)
 import(ComplexHeatmap)
 import(RColorBrewer)
+import(SummarizedExperiment, except = c(start, end))
 import(circlize)
 import(grDevices)
 import(grid)
