removed the executable script

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@ RPackage/BlackSheep/inst/.DS_Store
 RPackage/BlackSheep/tests/.DS_Store
 .Rhistory
 RPackage/BlackSheep/.Rhistory
+blackSheepR.Rproj
