--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(comparison_groupings)
 export(count_outliers)
 export(create_heatmap)
 export(deva)
+export(deva_results)
 export(make_comparison_columns)
 export(make_outlier_table)
 export(outlier_analysis)
