--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(comparison_groupings)
 export(count_outliers)
 export(create_heatmap)
 export(deva)
+export(deva_normalization)
 export(deva_results)
 export(make_comparison_columns)
 export(make_outlier_table)
@@ -16,6 +17,7 @@ import(SummarizedExperiment, except = c(start, end))
 import(circlize)
 import(grDevices)
 import(grid)
+import(pasilla)
 import(stats)
 import(utils)
 import(viridis)
